Changelog for HLint

    #428, don't suggest using String in an instance head
1.8.8
    #384, suggest collapsing multiple imports/exports
    #374, don't suggest the removal of necessary brackets
    #337, suggest Control.Exception.catch instead of Prelude.catch
    #412, add hints based on Control.Exception
    #378, suggest removing fromInteger/fromIntegral on literals
    #369, add notes to a few hints about possible pitfalls
    #409, fix a few cases where definitions suggested themselves
    #410, Support test* as ignored items in settings files
    #414, add isLit* pattern, and hint about ^^ ==> **
    #420, make the suggestion to use let a warning
    #408, rework the when/unless hints, don't suggest on itself
    Add duplicate detector, for copy/pasted code
    #285, don't show duplicate filepath separators
    If the user enters directories containing no files then say
    Make suggesting curry/uncurry a warning instead of an error
1.8.7
    Relax the transformers dependency, works with 0.0.* and 0.1.*
1.8.6
    Export suggestionSeverity/Severity from the API
    Allow hint imports with "hlint", as well as the existing "hint"
1.8.5
    Update the copyright year to 2011
    #400, support more encoding strings, give useful errors
    #401, rename the report template to report_template.html
    Replace filter f x /= [] with any f x, and 2 more similar
1.8.4
    #308, allow haskell-src-exts-1.10.1, which parses Unicode better
    import qualified Char ==> import qualified Data.Char as Char
    #393, fix suggestion for import IO, requires more than System.IO
    #376, note that RecordWildCards implies DisambiguateRecordFields
1.8.3
    Allow uniplate-1.6
    Switch from mtl to transformers
    #373, require haskell-src-exts-1.9.6
    Add a type signature for GHC 7
    Suggest [x | x <- xs] ==> xs, if x is a variable
1.8.2
    #371, foo (\x -> y :: Int -> Int) is not a redundant bracket
    Add a hint to use just equality rather than isJust/fromJust
1.8.1