@@ -1,0 +1,3 @@
+tests/cross.hs1
+tests/cross.hs2
+--cross
