@@ -1,0 +1,11 @@
+
+module B where
+
+
+bar = 1
+    where
+        a = 1
+        b = 2
+        c = 3
+
+
